--- a/play.html
+++ b/play.html
@@ -211,6 +211,12 @@ function directionOfDelta(xa, ya, xb, yb) {
 	return null
 }
 
+function hexDistance(a, b) {
+	var dx = a.x - b.x
+	var dy = a.y - b.y
+	return Math.sqrt(dx*dx + dy*dy)
+}
+
 var hexOverlay = null
 var cursor = {x: 10, y: 10}
 
@@ -297,6 +303,7 @@ heart.load = function() {
 	var a = gObjects[1175]
 	var b = gObjects[1260]
 	gObjects = [a, b]
+	//critterWalkTo(a, {x: 103, y: 113})
 }
 
 heart.keydown = function(k) {
@@ -511,7 +518,7 @@ function critterUpdateAnimation(obj) {
 	if(animInfo[obj.anim].type === "static") return critterUpdateStaticAnimation(obj)
 
 	var time = heart.timer.getTime()
-	var fps = 8 // todo: get FPS from image info
+	var fps = 10 // todo: get FPS from image info
 	var targetScreen = hexToScreen(obj.path.target.x, obj.path.target.y)
 	var moveDistance = getAnimDistance(obj.art)
 	var tilePerFrame = Math.floor(imageInfo[obj.art].numFrames / moveDistance)
@@ -527,7 +534,7 @@ function critterUpdateAnimation(obj) {
 			obj.position = h
 			obj.path.distance -= 1
 		}
-		else if(obj.frame === tilePerFrame*2) { // full walk, 2+ tiles
+		else if(obj.frame === tilePerFrame /* *2 */) { // full walk, 2+ tiles
 			obj.frame = 0
 			var h = hexInDirection(obj.position, obj.orientation)
 			var h2 = hexInDirection(h, obj.orientation)
